Thu Mar 24 14:52:03 2005  Will Otte <wotte@dre.vanderilt.edu>

	* DAnCE/Config_Handlers/Any_Handler.cpp

	Fixed a compile error for 64bit arch that resulted from
	the earlier VC6 fix.

Thu Mar 24 09:21:59 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:

          Added the "after" clause in the MPC file to fix a
          linker error.

Thu Mar 24 08:46:07 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ExecImplSourceGenerator.cpp:
        * CIDLC/Literals.cpp:
        * CIDLC/Literals.hpp:
        * CIDLC/ServantSourceGenerator.cpp:
        * CIDLC/TypeNameEmitter.cpp:

          - Added generation of ACE_UNUSED_ARG macros for local variables in
            the get_registered_consumers() method for upgradeable components,
            to avoid unused argument warnings if the component has no
            event consumers.

          - Added predefined string literals for "ACE_UNUSED_ARG",
            "ACE_CHECK_RETURN", and "ACE_THROW_RETURN".

Wed Mar 23 19:45:32 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL2/IDL2.vcpoj:

          Added more new files to the project, ValueTypeMember.hpp and
          ValueTypeMember.tpp in IDL2/Traversal.

        * CIDLC/ServantSourceGenerator.cpp:

          Restored backend code that was commented out until frontend
          support for traversal of valuetype/eventtype members was added.

Wed Mar 23 13:00:32 2005  Will Otte <wotte@dre.vanderbilt.edu>

	* DAnCE/Config_Handlers/Any_Handler.cpp

	Fixed compile errors for VC6.

Wed Mar 23 12:39:43 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:

          Added a missing library include.

Wed Mar 23 11:19:32 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

        * DAnCE/examples/Swapping/Sender/Sender.mpc:
        * DAnCE/examples/Swapping/Sender/Sender_exec_1.cpp:
        * DAnCE/examples/Swapping/Sender/Sender_exec_1.h: